# MIDIOgre

./: .buildinfo  PitchShift.py  README.md  api.html  examples.html  genindex.html  index.html  midiogre.augmentations.html  midiogre.core.html  midiogre.html  modules.html  objects.inv  pitch_shift.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: dev-build.yml  docs.yml  publish-dev.yml  publish.yml  test-publish.yml
MIDIOgre/augmentations/: duration_shift.py  note_add.py  note_delete.py  onset_time_shift.py  pitch_shift.py
MIDIOgre/core/: composition.py  compositions.py  conversions.py  transforms_interface.py  transforms_viz.py
_modules/: index.html
_modules/midiogre/augmentations/: duration_shift.html  note_add.html  note_delete.html  onset_time_shift.html  pitch_shift.html  tempo_shift.html
_modules/midiogre/core/: compositions.html  conversions.html  transforms_interface.html
augmentations/: duration_shift.py  note_delete.py  onset_time_shift.py  pitch_shift.py
core/: transforms_interface.py  transforms_viz.py
demo/: README.html  generate_examples.py
midiogre/: _version.py
midiogre/augmentations/: __init__.py  duration_shift.py  note_add.py  note_delete.py  onset_time_shift.py  pitch_shift.py  tempo_shift.py
midiogre/core/: compositions.py  conversions.py  transforms_interface.py  transforms_viz.py
tests/augmentations/: core_mocks.py  test_duration_shift.py  test_note_add.py  test_note_delete.py  test_onset_time_shift.py  test_pitch_shift.py  test_tempo_shift.py
tests/core/: test_compositions.py  test_conversions.py
