[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midiogre"
dynamic = ["version"]
description = "The On-the-fly MIDI Data Augmentation Library!"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Ashwin Pillay", email = "c6idbv07e@mozmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/a-pillay/MIDIOgre"
Documentation = "https://a-pillay.github.io/MIDIOgre/"
"Issue Tracker" = "https://github.com/a-pillay/MIDIOgre/issues"

[tool.setuptools_scm]
write_to = "midiogre/_version.py" 